discussion/kv_engine/176594/176594_rev7_discussion.txt
======================================================================================================================
DESCRIPTION:

Account for non-zero initial mem_usage in DCP test

As part of this test, items are written until a new open checkpoint is
created when `vb_0:mem_usage >= ep_checkpoint_max_size`.

Previously, we didn't account for the initial mem_usage before items
were added, which could cause test failure by making an item that
should've been in the current checkpoint "overflow" into the next.

Change-Id: Ic2f77d0c2741db086b73caf15de311640a624079

======================================================================================================================
COMMENTS
======================================================================================================================
Author: Douglas
Date: 2022-07-01 13:58:11.000000000
Message: 
Uploaded patch set 7: Patch Set 6 was rebased.
----------------------------------------------------------------------------------------------------------------------
Author: Build Bot
Date: 2022-07-01 14:19:37.000000000
Message: 
Patch Set 7: Verified-1 Code-Review-1

Build Failed 

http://cv.jenkins.couchbase.com/job/kv_engine-windows-master/47263/ : FAILURE

Compile error at ..\kv_engine\engines\ep\tests\ep_testsuite_dcp.cc(2023): error C2059: syntax error: "," ( http://cv.jenkins.couchbase.com/job/kv_engine-windows-master/47263/ )

http://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy-master/18498/ : FAILURE

clang-tidy found the following problems:

<pre>
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/kv_engine/engines/ep/tests/ep_testsuite_dcp.cc:2023:5: error: reference to overloaded function could not be resolved; did you mean to call it? [clang-diagnostic-error]
    checkge(openCkptMemFree, itemsPerCheckpoint);
    ^
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/kv_engine/engines/ep/tests/ep_testsuite_common.h:72:13: note: possible target for call
static void checkgefn(T exp, T got, const char *msg, const char *file,
            ^
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/kv_engine/engines/ep/tests/ep_testsuite_dcp.cc:2023:5: error: use of undeclared identifier "checkge"; did you mean "checkgefn"? [clang-diagnostic-error]
    checkge(openCkptMemFree, itemsPerCheckpoint);
    ^~~~~~~
    checkgefn
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/kv_engine/engines/ep/tests/ep_testsuite_common.h:72:13: note: "checkgefn" declared here
static void checkgefn(T exp, T got, const char *msg, const char *file,
            ^
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/kv_engine/engines/ep/tests/ep_testsuite_dcp.cc:2023:48: error: too few arguments provided to function-like macro invocation [clang-diagnostic-error]
    checkge(openCkptMemFree, itemsPerCheckpoint);
                                               ^
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/kv_engine/engines/ep/tests/ep_testsuite_common.h:101:9: note: macro "checkge" defined here
#define checkge(expected, actual, msg) \
        ^

</pre> ( http://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy-master/18498/ )

Compile error at /home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/kv_engine/engines/ep/tests/ep_testsuite_dcp.cc:2023:5:
error: reference to overloaded function could not be resolved; did you mean to call it? [clang-diagnostic-error]
 ( http://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy-master/18498/ )

http://cv.jenkins.couchbase.com/job/kv_engine.aarch64-linux/job/master/8267/ : FAILURE

Compile error at [2022-07-01T14:16:14.622Z] ../kv_engine/engines/ep/tests/ep_testsuite_dcp.cc:2023:48:
error: macro "checkge" requires 3 arguments, but only 2 given
 ( http://cv.jenkins.couchbase.com/job/kv_engine.aarch64-linux/job/master/8267/ )

http://cv.jenkins.couchbase.com/job/kv_engine.libFuzzer/job/master/8169/ : FAILURE

Compile error at [2022-07-01T14:12:43.515Z] ../kv_engine/engines/ep/tests/ep_testsuite_dcp.cc:2023:48:
error: too few arguments provided to function-like macro invocation
 ( http://cv.jenkins.couchbase.com/job/kv_engine.libFuzzer/job/master/8169/ )

http://cv.jenkins.couchbase.com/job/kv_engine.linux/job/master/20730/ : FAILURE

Compile error at [2022-07-01T14:16:43.471Z] ../kv_engine/engines/ep/tests/ep_testsuite_dcp.cc:2023:48:
error: macro "checkge" requires 3 arguments, but only 2 given
 ( http://cv.jenkins.couchbase.com/job/kv_engine.linux/job/master/20730/ )

http://cv.jenkins.couchbase.com/job/kv_engine.ASan-UBSan/job/master/28763/ : FAILURE

Compile error at [2022-07-01T14:19:02.791Z] ../kv_engine/engines/ep/tests/ep_testsuite_dcp.cc:2023:48:
error: too few arguments provided to function-like macro invocation
 ( http://cv.jenkins.couchbase.com/job/kv_engine.ASan-UBSan/job/master/28763/ )

http://cv.jenkins.couchbase.com/job/kv_engine.macos/job/master/19602/ : FAILURE

Compile error at [2022-07-01T14:13:30.761Z] /Users/couchbase/workspace/workspace/kv_engine.macos_master/kv_engine/engines/ep/tests/ep_testsuite_dcp.cc:2023:48:
error: too few arguments provided to function-like macro invocation
 ( http://cv.jenkins.couchbase.com/job/kv_engine.macos/job/master/19602/ )

http://cv.jenkins.couchbase.com/job/kv_engine.linux-CE/job/master/20382/ : FAILURE

Compile error at [2022-07-01T14:09:10.344Z] ../kv_engine/engines/ep/tests/ep_testsuite_dcp.cc:2023:48:
error: macro "checkge" requires 3 arguments, but only 2 given
 ( http://cv.jenkins.couchbase.com/job/kv_engine.linux-CE/job/master/20382/ )

http://cv.jenkins.couchbase.com/job/kv_engine.threadsanitizer/job/master/21370/ : FAILURE

Compile error at [2022-07-01T14:15:35.729Z] ../kv_engine/engines/ep/tests/ep_testsuite_dcp.cc:2023:48:
error: too few arguments provided to function-like macro invocation
 ( http://cv.jenkins.couchbase.com/job/kv_engine.threadsanitizer/job/master/21370/ )

http://cv.jenkins.couchbase.com/job/kv_engine-clang_format_9/17650/ : SUCCESS

http://cv.jenkins.couchbase.com/job/kv_engine-clang_analyzer-master/39710/ : SUCCESS
----------------------------------------------------------------------------------------------------------------------
